s commit v1.3 review page done and fixes to overflow

--- a/Archives/style3.css
+++ b/Archives/style3.css
@@ -21,3 +21,63 @@ text-align:center;
 {
 text-align:center;
 }
+#wrapper
+{
+width:900px;
+height:600px;
+background:yellow;
+position:relative;
+left:140px
+}
+#menu
+{
+float:left;
+width:200px;
+height:600px;
+background:orange;
+}
+#main
+{
+float:right;
+width:700px;
+height:600px;
+background:lime;
+overflow:auto;
+}
+#selector1
+{
+width:700px;
+height: 21px;
+}
+.selector2
+{
+float:left;
+display: block;
+height: 20px;
+width: 173px;
+border: 1px solid #000;
+}
+.video1
+{
+float:left;
+width:200px;
+height:150px;
+background:red;
+position:relative;
+top:40px;
+left:100px;
+margin-bottom:40px;
+margin-right:40px;
+}
+.video2
+{
+float:left;
+width:200px;
+height:150px;
+background:red;
+position:relative;
+top:40px;
+left:100px;
+margin-bottom:40px;
+margin-right:40px;
+}
